# spirits

./: .gitignore  README.en.md  README.md  __init__.py  gather.py  pyproject.toml  requirements.txt  scatter.py
example/: images.list
spirits/: command.py  scatter.py
